--- a/src/allC.css
+++ b/src/allC.css
@@ -4,7 +4,7 @@
 
 .container{
     display:flex;
-    background-color: blueviolet;
+    background-color: whitesmoke;
     margin: 1rem;
     height: auto;
     overflow-y: auto;
